centered game and placeholders

--- a/styles/less/styles.less
+++ b/styles/less/styles.less
@@ -28,7 +28,8 @@ body {
     }
 
     div#game {
-      width: 800px;
+      width: 1024px;
+      height: 800px;
       display: block;
       margin-left: auto;
       margin-right: auto;
