Connection font fixed

--- a/styles/less/styles.less
+++ b/styles/less/styles.less
@@ -6,8 +6,15 @@
 @h1-size: 50px;
 
 @font-face {
-  font-family: "Connection";
-  src: url("../../assets/font/Connection.ttf") format("truetype");
+  font-family: 'Connection';
+  src: url('../../assets/font/Connection.eot');
+  src: url('../../assets/font/Connection.eot?#iefix') format('embedded-opentype'),
+      url('../../assets/font/Connection.woff2') format('woff2'),
+      url('../../assets/font/Connection.woff') format('woff'),
+      url('../../assets/font/Connection.ttf') format('truetype'),
+      url('../../assets/font/Connection.svg#Connection') format('svg');
+  font-weight: normal;
+  font-style: normal;
 }
 
 head {
